@@ -6,25 +6,29 @@
 	<classpathentry kind="src" path="src/test/resources"/>
 	<classpathentry kind="src" path="src/bugs"/>
 	<classpathentry kind="src" path="src/tests"/>
-	<classpathentry output="anttask/eclipse" kind="src" path="anttask/src/main/java"/>
-	<classpathentry output="anttask/eclipse" kind="src" path="anttask/src/main/resources"/>
-	<classpathentry output="codegen/eclipse" kind="src" path="codegen/src/main/java"/>
-	<classpathentry output="codegen/eclipse" kind="src" path="codegen/src/main/resources"/>
-	<classpathentry output="cpactf/eclipse" kind="src" path="cpactf/src/main/java"/>
-	<classpathentry output="cpactf/eclipse" kind="src" path="cpactf/src/main/resources"/>
-	<classpathentry output="cpactf/eclipse" kind="src" path="cpactf/src/test/java"/>
-	<classpathentry output="cpactf/eclipse" kind="src" path="cpactf/src/test/resources"/>
-	<classpathentry output="cpaptf/eclipse" kind="src" path="cpaptf/src/test/java"/>
-	<classpathentry output="cpaptf/eclipse" kind="src" path="cpaptf/src/test/resources"/>
-	<classpathentry output="ddlgen/eclipse" kind="src" path="ddlgen/src/main/java"/>
-	<classpathentry output="ddlgen/eclipse" kind="src" path="ddlgen/src/main/resources"/>
-	<classpathentry output="ddlgen/eclipse" kind="src" path="ddlgen/src/test/java"/>
-	<classpathentry output="ddlgen/eclipse" kind="src" path="ddlgen/src/test/resources"/>
-	<classpathentry output="xmlctf/eclipse" kind="src" path="xmlctf/src/main/java"/>
-	<classpathentry kind="src" path="codegen/src/test/java"/>
-	<classpathentry kind="src" path="codegen/src/test/resources"/>
-	<classpathentry excluding="codegen/" output="examples/eclipse" kind="src" path="examples/src/main/java"/>
-	<classpathentry output="examples/eclipse" kind="src" path="examples/src/main/resources"/>
+	<classpathentry kind="src" output="anttask/eclipse" path="anttask/src/main/java"/>
+	<classpathentry kind="src" output="anttask/eclipse" path="anttask/src/main/resources"/>
+	<classpathentry kind="src" output="codegen/eclipse" path="codegen/src/main/java"/>
+	<classpathentry kind="src" output="codegen/eclipse" path="codegen/src/main/resources"/>
+	<classpathentry kind="src" output="codegen/eclipse" path="codegen/src/test/java"/>
+	<classpathentry kind="src" output="codegen/eclipse" path="codegen/src/test/resources"/>
+	<classpathentry kind="src" output="cpa/eclipse" path="cpa/src/main/java"/>
+	<classpathentry kind="src" output="cpa/eclipse" path="cpa/src/main/resources"/>
+	<classpathentry kind="src" output="cpa/eclipse" path="cpa/src/test/java"/>
+	<classpathentry kind="src" output="cpa/eclipse" path="cpa/src/test/resources"/>
+	<classpathentry kind="src" output="cpactf/eclipse" path="cpactf/src/main/java"/>
+	<classpathentry kind="src" output="cpactf/eclipse" path="cpactf/src/main/resources"/>
+	<classpathentry kind="src" output="cpactf/eclipse" path="cpactf/src/test/java"/>
+	<classpathentry kind="src" output="cpactf/eclipse" path="cpactf/src/test/resources"/>
+	<classpathentry kind="src" output="cpaptf/eclipse" path="cpaptf/src/test/java"/>
+	<classpathentry kind="src" output="cpaptf/eclipse" path="cpaptf/src/test/resources"/>
+	<classpathentry kind="src" output="ddlgen/eclipse" path="ddlgen/src/main/java"/>
+	<classpathentry kind="src" output="ddlgen/eclipse" path="ddlgen/src/main/resources"/>
+	<classpathentry kind="src" output="ddlgen/eclipse" path="ddlgen/src/test/java"/>
+	<classpathentry kind="src" output="ddlgen/eclipse" path="ddlgen/src/test/resources"/>
+	<classpathentry excluding="codegen/" kind="src" output="examples/eclipse" path="examples/src/main/java"/>
+	<classpathentry kind="src" output="examples/eclipse" path="examples/src/main/resources"/>
+	<classpathentry kind="src" output="xmlctf/eclipse" path="xmlctf/src/main/java"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/jakarta-oro-2.0.5.jar"/>
 	<classpathentry kind="lib" path="lib/jakarta-regexp-1.1.jar"/>
